# Anthony J. Clark. Copyright (C) 2015. Apache License 2.0.


#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED (VERSION 3.0.0)
PROJECT (raptor)
SET (APPLICATION_NAME "raptorlang")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2015")

SET (APPLICATION_VERSION_MAJOR "0")
SET (APPLICATION_VERSION_MINOR "1")
SET (APPLICATION_VERSION_PATCH "0")
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")

SET (APPLICATION_VENDOR_ID "com.AJC")
SET (APPLICATION_VENDOR_NAME "AJC")
SET (APPLICATION_VENDOR_URL "https://github.com/anthony-jclark/raptorlang")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")


#
# Set Compiler Flag Options
#
ADD_COMPILE_OPTIONS (
    -std=c++1z -Wall -Wextra -Werror -Wconversion
    -O3 -fvisibility-inlines-hidden -fno-common
    -Woverloaded-virtual -Wcast-qual
)

#
# Debugging Options
# # Use 1 for debugging, 0 for release
SET (CMAKE_VERBOSE_MAKEFILE 0)
SET (CMAKE_BUILD_TYPE debug)
OPTION (DEFINE_DEBUGGING "Add debugging output" ON)
SET (DEBUGGING "DEBUGGING")


#
# Set Project Paths
#
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
SET (BIN_PATH "${MAINFOLDER}/bin")
SET (LIB_PATH "${MAINFOLDER}/lib")
SET (SRC_PATH "${MAINFOLDER}/src")
SET (SUPPORT_PATH "${MAINFOLDER}/support")


#
# Project Output Paths
#
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_PATH})


#
# Project Search Paths
#
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
SET (CMAKE_MODULE_PATH "${SUPPORT_PATH}/cmake_modules")


#
# Configure Files
#
FILE (GLOB_RECURSE CONFIGINPUTS1 src/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS2 src/*.h.in.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS3 test/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS4 test/*.h.in.cmake)
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS4}")
FOREACH (CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
    STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})


#
# Add library names for testing
#
SET (TEST "TESTING")
SET (rex_LIB "rex")
SET (rar_LIB "rar")


#
# Add Build Targets
#
ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (test)


#
# Add Documentation Targets
#
INCLUDE (DocumentationTargets)
