
FILE (GLOB project_SRCS *.cpp *.cxx *.cc)
SET (project_BIN ${PROJECT_NAME})

ADD_EXECUTABLE (${project_BIN} ${project_SRCS})
TARGET_INCLUDE_DIRECTORIES (${project_BIN} SYSTEM PUBLIC ${MAINFOLDER}/support/cxxopts/src/)
TARGET_INCLUDE_DIRECTORIES (${project_BIN} SYSTEM PUBLIC ${MAINFOLDER}/support/easyloggingpp/src/)

SET_TARGET_PROPERTIES (${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL (TARGETS ${project_BIN} DESTINATION bin)
